# Tuesday

./: .env.example  .gitignore  README.md  SECURITY.md  backlog.md  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  turbo.json
app/: __init__.py  audio.py  config.py  hotkeys.py  settings_manager.py
app/ai/: __init__.py  dictation.py  executor.py  interpreter.py
app/autonomous/: __init__.py  morning_report.py  runner.py
app/commands/: __init__.py  builtin.py  router.py  voice_programmer.py
app/commands/user_generated/: __init__.py
app/stt/: base.py  whisper_stt.py
app/tts/: base.py  edge_tts_provider.py  manager.py  piper_tts_provider.py  pyttsx_tts.py
app/ui/: __init__.py  hotkey_edit.py  main_window.py  settings_dialog.py  styles.py
app/wake/: detector.py
apps/agent/: package.json
apps/agent/src/: config.ts  connection.ts  hotkey.ts  index.ts  voice.ts
apps/agent/src/actions/: handler.ts
apps/server/: Dockerfile  package.json
apps/server/prisma/: schema.prisma
apps/server/src/: config.ts  index.ts  setup-models.ts  setup-tools.ts  ws.ts
apps/server/src/__tests__/: config.test.ts
apps/web/: Dockerfile  index.html  package.json  vite.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts
scripts/: morning_report.py  run_tests.sh
tests/: __init__.py  test_ai_executor.py  test_ai_interpreter.py  test_autonomous.py  test_builtin_commands.py  test_config.py  test_dictation.py  test_hotkeys.py  test_router.py  test_settings_manager.py  test_voice_programmer.py  test_wake_detector.py
(+43 files in other folders)
